--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ openssl/include/internal/dso_conf.h
 /samples/.vs
 /EDK-II/EDK-II.VC.db
 /samples/samples.VC.db
+EDK-II/BaseLib/BaseLib.vcxproj.user
+EDK-II/IntrinsicLib/IntrinsicLib.vcxproj.user
+EDK-II/OpensslLib/OpensslLib.vcxproj.user
